--- a/index.html
+++ b/index.html
@@ -5,8 +5,163 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <header class="page-header">
+      <nav>
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <img src="logo.svg">
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="main.html">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="about_Sedona">О Седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="Hotels">Гостиницы</a>
+          </li>
+        </ul>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">
+                Поиск
+              </span>
+              </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">
+                Понравилось
+              </span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Хочу сюда</a>
+          </li>
+        </ul>
+      </nav>
+    </header>>
+
+    <main class="main-index">
+      <h1 class="visually-hidden">Sedona</h1>
+      <section>
+        <div class="welcome">Welcome</div>
+        <div class="gorgerouse">-to the gorgerouse-</div>
+        <div class="sedona">SEDONA</div>
+        <div class="canyon">"Becouse the Grand Canyon Sucks!"</div>
+      </section>
+
+      <section>
+        <div>Седона — небольшой городок в Аризоне,
+          заслуживающий большего!</div>
+        <div>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</div>
+      </section>
+
+      <section class="advanteges">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <ul class="advaneges-list">
+          <li class="advanteges-item">
+            <h3 class="advanteges-title">Настоящий городок</h3>
+            <p class="advanteges-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          </li>
+          <li class="advanteges-item-img">
+            <img src="" alt="">
+          </li>
+          <li class="advanteges-item">
+            <h3 class="advanteges-title">Небольшая площадь</h3>
+            <p class="advanteges-description">Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="advanteges-item">
+            <h3 class="advanteges-title">Красивая
+              дорога</h3>
+            <p class="advanteges-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advanteges-item">
+            <h3 class="advanteges-title">Мало
+              туристов</h3>
+            <p class="advanteges-description">Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+          <li class="advanteges-item-img">
+            <img src="" alt="">
+          </li>
+          <li class="advanteges-item">
+            <h3 class="advanteges-title">Там есть мост дьявола</h3>
+            <p class="advanteges-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          </li>
+          <li class="advanteges-item">
+            <img src="" alt="Изображение дома">
+            <h3 class="advanteges-title">Жильё</h3>
+            <p class="advanteges-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li class="advanteges-item">
+            <img src="" alt="Изображение бургера">
+            <h3 class="advanteges-title">Еда</h3>
+            <p class="advanteges-description">Всегда заказывайте
+              топовый фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="advanteges-item">
+            <img src="" alt="Изображение подарка">
+            <h3 class="advanteges-title">Сувениры</h3>
+            <p class="advanteges-description">Не только китайского,
+              но и настоящего местного производства!</p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="hotels">
+        <h2 class="visually-hidden">Отели</h2>
+
+          <div>Заинтересовались?</div>
+          <div>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</div>
+          <button type="button">ПОИСК ГОСТИНИЦЫ В седоне</button>
+
+      </section>
+
+      <section class="subscribe">
+        <h2 class="">Подпишитесь на рассылку</h2>
+        <p class="">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <div>
+          <label for=""></label>
+          <input type="email" name="email" id="email" placeholder="Ваш e-mail">
+
+          <button type="submit">Подписаться</button>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <section class="footer-social">
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="icon" href="#">
+              <span class="visually-hidden">VK</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="icon" href="#">
+              <span class="visially-hidden">Telegram</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="icon" href="#">
+              <span class="visially-hidden">You-tube</span>
+            </a>
+          </li>
+        </ul>
+       </section>
+       <section>
+        <h2 class="visually-hidden">Номер телефона</h2>
+        <div>+7(812)812-12-12</div>
+       </section>
+       <section>
+        <h2 class="visually-hidden">Ссылка на сайт разработчика</h2>
+        <a href="#">.html academy</a>
+       </section>
+
+    </footer>
+
 
   </body>
 </html>
