--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>Главная страница</title>
   </head>
   <body>
     <header class="page-header">
       <nav>
         <ul class="navigation-list">
           <li class="navigation-item">
-            <img src="logo.svg">
+            <img class="logo" src="image/header/logo.svg" width="140" height="70" alt="Логотип Седоны">
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="main.html">Главная</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="about_Sedona">О Седоне</a>
+            <a class="navigation-link" href="about.html">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="Hotels">Гостиницы</a>
+            <a class="navigation-link" href="Catalog.html">Гостиницы</a>
           </li>
         </ul>
 
@@ -26,6 +26,7 @@
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">
+                <img src="image/header/search.svg" alt="Поиск">
                 Поиск
               </span>
               </a>
@@ -33,25 +34,27 @@
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">
+                <img src="image/header/like.svg" height="10" width="11" alt="Like">
                 Понравилось
               </span>
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Хочу сюда</a>
+            <a class="navigation-link" href="#">
+              <button>Хочу сюда!</button>
+              </a>
           </li>
         </ul>
       </nav>
-    </header>>
+    </header>
 
     <main class="main-index">
       <h1 class="visually-hidden">Sedona</h1>
       <section>
-        <div class="welcome">Welcome</div>
-        <div class="gorgerouse">-to the gorgerouse-</div>
-        <div class="sedona">SEDONA</div>
-        <div class="canyon">"Becouse the Grand Canyon Sucks!"</div>
-      </section>
+          <div class="welcome"><img src="image/adventeges/welcome.svg" alt="Welcome" height="44.7" width="187.7"></div>
+          <div class="gorgerouse"><img src="image/adventeges/to-the-gorgeous.svg" height="28.78" width="256" alt="To the gorgerouse"></div>
+          <div class="sedona"><img src="image/adventeges/sedona.svg" height="212.77" width="456.7" alt="Sedona Because the Graund Canyon Sucks"></div>
+        </section>
 
       <section>
         <div>Седона — небольшой городок в Аризоне,
@@ -67,7 +70,7 @@
             <p class="advanteges-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
           </li>
           <li class="advanteges-item-img">
-            <img src="" alt="">
+            <img src="image/adventeges/photo-1.jpg" height="384" width="800" alt="Вид ресторана">
           </li>
           <li class="advanteges-item">
             <h3 class="advanteges-title">Небольшая площадь</h3>
@@ -84,25 +87,25 @@
             <p class="advanteges-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
           <li class="advanteges-item-img">
-            <img src="" alt="">
+            <img src="image/adventeges/photo-2.jpg" height="384" width="800" alt="Вид каньона">
           </li>
           <li class="advanteges-item">
             <h3 class="advanteges-title">Там есть мост дьявола</h3>
             <p class="advanteges-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </li>
           <li class="advanteges-item">
-            <img src="" alt="Изображение дома">
+            <img src="image/adventeges/house.svg" height="384" width="400" alt="Изображение дома">
             <h3 class="advanteges-title">Жильё</h3>
             <p class="advanteges-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
           <li class="advanteges-item">
-            <img src="" alt="Изображение бургера">
+            <img src="image/adventeges/food.svg" height="384" width="400" alt="Изображение бургера">
             <h3 class="advanteges-title">Еда</h3>
             <p class="advanteges-description">Всегда заказывайте
               топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
           <li class="advanteges-item">
-            <img src="" alt="Изображение подарка">
+            <img src="image/adventeges/box.svg" height="384" width="400" alt="Изображение подарка">
             <h3 class="advanteges-title">Сувениры</h3>
             <p class="advanteges-description">Не только китайского,
               но и настоящего местного производства!</p>
@@ -136,17 +139,17 @@
         <ul class="footer-social-list">
           <li class="footer-social-item">
             <a class="icon" href="#">
-              <span class="visually-hidden">VK</span>
+              <img src="image/footer/vk.svg" height="14" width="24" alt="В контакте" >
             </a>
           </li>
           <li class="footer-social-item">
             <a class="icon" href="#">
-              <span class="visially-hidden">Telegram</span>
+              <img src="image/footer/telegram.svg" height="15.1" width="18" alt="Telegram" >
             </a>
           </li>
           <li class="footer-social-item">
             <a class="icon" href="#">
-              <span class="visially-hidden">You-tube</span>
+              <img src="image/footer/you-tube.svg" height="17" width="22" alt="You-tube" >
             </a>
           </li>
         </ul>
@@ -157,7 +160,9 @@
        </section>
        <section>
         <h2 class="visually-hidden">Ссылка на сайт разработчика</h2>
-        <a href="#">.html academy</a>
+        <a href="#">
+          <img src="image/footer/html-academy.svg" height="32.9" width="114.9" alt="html academy">
+          </a>
        </section>
 
     </footer>
