Добавляет background-image

--- a/Catalog.html
+++ b/Catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Каталог</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header class="page-header">
@@ -41,7 +42,7 @@
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <button>Хочу сюда!</button>
+              <button class="button-brown">Хочу сюда!</button>
               </a>
           </li>
         </ul>
@@ -150,17 +151,17 @@
             </a>
             <b class="product-card-view">Гостиница</b>
             <b class="product-card-price">От 4000 ₽</b>
-            <a class="product-class-button button" href="#">
-              <button>ПОДРОБНЕЕ</button>
+            <a  href="#">
+              <button class="product-class-button button-brown">ПОДРОБНЕЕ</button>
             </a>
-            <a class="product-class-button button" href="#">
-              <button>В ИЗБРАННОЕ</button>
+            <a href="#">
+              <button  class="product-class-button button-blue">В ИЗБРАННОЕ</button>
             </a>
             <img src="image/catalog/star.svg " height="17" width="18" alt="звезда">
             <img src="image/catalog/star.svg " height="17" width="18" alt="звезда">
             <img src="image/catalog/star.svg " height="17" width="18" alt="звезда">
             <img src="image/catalog/star.svg " height="17" width="18" alt="звезда">
-            <button>РЕЙТИНГ: 8,5</button>
+            <button class="button-rating">РЕЙТИНГ: 8,5</button>
           </li>
 
           <li class="product-card">
@@ -170,16 +171,16 @@
             </a>
             <b class="product-card-view">Гостиница</b>
             <b class="product-card-price">От 5000 ₽</b>
-            <a class="product-class-button button" href="#">
-              <button>ПОДРОБНЕЕ</button>
+            <a  href="#">
+              <button class="product-class-button button-brown">ПОДРОБНЕЕ</button>
             </a>
-            <a class="product-class-button button" href="#">
-              <button>В ИЗБРАННОЕ</button>
+            <a  href="#">
+              <button class="product-class-button button-green">В ИЗБРАННОМ</button>
               <img src="image/catalog/star.svg " height="17" width="18" alt="звезда">
               <img src="image/catalog/star.svg " height="17" width="18" alt="звезда">
               <img src="image/catalog/star.svg " height="17" width="18" alt="звезда">
               <img src="image/catalog/star.svg " height="17" width="18" alt="звезда">
-            <button>РЕЙТИНГ: 9,2</button>
+            <button class="button-rating">РЕЙТИНГ: 9,2</button>
           </li>
 
           <li class="product-card">
@@ -190,15 +191,15 @@
 
             <b class="product-card-view">Гостиница</b>
             <b class="product-card-price">От 2500 ₽</b>
-            <a class="product-class-button button" href="#">
-              <button>ПОДРОБНЕЕ</button>
+            <a href="#">
+              <button  class="product-class-button button-brown">ПОДРОБНЕЕ</button>
             </a>
-            <a class="product-class-button button" href="#">
-              <button>В ИЗБРАННОЕ</button>
+            <a  href="#">
+              <button class="product-class-button button-blue">В ИЗБРАННОЕ</button>
             <img src="image/catalog/star.svg " height="17" width="18" alt="звезда">
             <img src="image/catalog/star.svg " height="17" width="18" alt="звезда">
             <img src="image/catalog/star.svg " height="17" width="18" alt="звезда">
-            <button>РЕЙТИНГ: 6,9</button>
+            <button class="button-rating">РЕЙТИНГ: 6,9</button>
           </li>
 
           <li class="product-card">
@@ -208,14 +209,14 @@
             </a>
             <b class="product-card-view">Гостиница</b>
             <b class="product-card-price">От 1500 ₽</b>
-            <a class="product-class-button button" href="#">
-              <button>ПОДРОБНЕЕ</button>
+            <a  href="#">
+              <button class="product-class-button button-brown">ПОДРОБНЕЕ</button>
             </a>
-            <a class="product-class-button button" href="#">
-              <button>В ИЗБРАННОЕ</button>
+            <a  href="#">
+              <button class="product-class-button button-blue">В ИЗБРАННОЕ</button>
               <img src="image/catalog/star.svg " height="17" width="18" alt="звезда">
               <img src="image/catalog/star.svg " height="17" width="18" alt="звезда">
-              <button>РЕЙТИНГ: 5,0</button>
+              <button class="button-rating">РЕЙТИНГ: 5,0</button>
           </li>
         </ul>
 
@@ -243,15 +244,16 @@
     </main>
 
     <section class="subscribe">
-      <h2 class="">Подпишитесь на рассылку</h2>
-      <p class="">Только полезная информация и никакого спама, честное бойскаутское!</p>
+      <h2 class="mail">Подпишитесь на рассылку</h2>
+      <p class="mail-info">Только полезная информация и никакого спама, честное бойскаутское!</p>
       <div>
         <label for=""></label>
         <input type="email" name="email" id="email" placeholder="Ваш e-mail">
 
-        <button type="submit">Подписаться</button>
+        <button class="button-blue" type="submit">Подписаться</button>
       </div>
     </section>
+  </main>
 
     <footer>
       <section class="footer-social">
@@ -285,6 +287,7 @@
        </section>
 
     </footer>
+
 
 
   </body>
