--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Главная страница</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header class="page-header">
@@ -34,14 +35,14 @@
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">
-                <img src="image/header/like.svg" height="10" width="11" alt="Like">
+                <img src="image/header/like.svg" height="17" width="18" alt="Like">
                 Понравилось
               </span>
             </a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <button>Хочу сюда!</button>
+              <button class="button-brown">Хочу сюда!</button>
               </a>
           </li>
         </ul>
@@ -50,21 +51,21 @@
 
     <main class="main-index">
       <h1 class="visually-hidden">Sedona</h1>
-      <section>
+      <section class="about">
           <div class="welcome"><img src="image/adventeges/welcome.svg" alt="Welcome" height="44.7" width="187.7"></div>
           <div class="gorgerouse"><img src="image/adventeges/to-the-gorgeous.svg" height="28.78" width="256" alt="To the gorgerouse"></div>
           <div class="sedona"><img src="image/adventeges/sedona.svg" height="212.77" width="456.7" alt="Sedona Because the Graund Canyon Sucks"></div>
         </section>
 
       <section>
-        <div>Седона — небольшой городок в Аризоне,
+        <div class="description">Седона — небольшой городок в Аризоне,
           заслуживающий большего!</div>
-        <div>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</div>
+        <div class="description-little">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</div>
       </section>
 
       <section class="advanteges">
         <h2 class="visually-hidden">Преимущества</h2>
-        <ul class="advaneges-list">
+        <ul class="advanteges-list">
           <li class="advanteges-item">
             <h3 class="advanteges-title">Настоящий городок</h3>
             <p class="advanteges-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
@@ -73,18 +74,18 @@
             <img src="image/adventeges/photo-1.jpg" height="384" width="800" alt="Вид ресторана">
           </li>
           <li class="advanteges-item">
-            <h3 class="advanteges-title">Небольшая площадь</h3>
-            <p class="advanteges-description">Все достопримечательности находятся очень близко</p>
+            <h3 class="advanteges-title-black">Небольшая площадь</h3>
+            <p class="advanteges-description-black">Все достопримечательности находятся очень близко</p>
           </li>
           <li class="advanteges-item">
-            <h3 class="advanteges-title">Красивая
+            <h3 class="advanteges-title-black">Красивая
               дорога</h3>
-            <p class="advanteges-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            <p class="advanteges-description-black">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="advanteges-item">
-            <h3 class="advanteges-title">Мало
+            <h3 class="advanteges-title-black">Мало
               туристов</h3>
-            <p class="advanteges-description">Большинство едет в Гранд Каньон и толпится там</p>
+            <p class="advanteges-description-black">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
           <li class="advanteges-item-img">
             <img src="image/adventeges/photo-2.jpg" height="384" width="800" alt="Вид каньона">
@@ -94,18 +95,18 @@
             <p class="advanteges-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </li>
           <li class="advanteges-item">
-            <img src="image/adventeges/house.svg" height="384" width="400" alt="Изображение дома">
+            <img src="image/adventeges/house.svg" height="72" width="75" alt="Изображение дома">
             <h3 class="advanteges-title">Жильё</h3>
             <p class="advanteges-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
           <li class="advanteges-item">
-            <img src="image/adventeges/food.svg" height="384" width="400" alt="Изображение бургера">
+            <img src="image/adventeges/food.svg" height="72" width="75" alt="Изображение бургера">
             <h3 class="advanteges-title">Еда</h3>
             <p class="advanteges-description">Всегда заказывайте
               топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
           <li class="advanteges-item">
-            <img src="image/adventeges/box.svg" height="384" width="400" alt="Изображение подарка">
+            <img src="image/adventeges/box.svg" height="72" width="75" alt="Изображение подарка">
             <h3 class="advanteges-title">Сувениры</h3>
             <p class="advanteges-description">Не только китайского,
               но и настоящего местного производства!</p>
@@ -116,20 +117,20 @@
       <section class="hotels">
         <h2 class="visually-hidden">Отели</h2>
 
-          <div>Заинтересовались?</div>
-          <div>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</div>
-          <button type="button">ПОИСК ГОСТИНИЦЫ В седоне</button>
+          <div class="interest">Заинтересовались?</div>
+          <div class="interest-text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</div>
+          <button class="button-brown" type="button">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
 
       </section>
 
       <section class="subscribe">
-        <h2 class="">Подпишитесь на рассылку</h2>
-        <p class="">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <h2 class="mail">Подпишитесь на рассылку</h2>
+        <p class="mail-info">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <div>
           <label for=""></label>
           <input type="email" name="email" id="email" placeholder="Ваш e-mail">
 
-          <button type="submit">Подписаться</button>
+          <button class="button-blue" type="submit">Подписаться</button>
         </div>
       </section>
     </main>
